<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/supremelightgrey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_title"
        android:textColor="@color/headings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Covid - Safe"
        android:gravity="center_horizontal"
        android:textSize="48sp"
        android:fontFamily="@font/extraboldfont"
        android:padding="5dp"
        >
    </TextView>

    <TextView
        android:textColor="@color/headings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="35sp"
        android:fontFamily="@font/boldfont"
        android:padding="10dp"
        >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        />



    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email_txt"
            android:inputType="textEmailAddress"
            android:textColor="@color/DarkBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password_txt"
            android:layout_width="match_parent"
            android:textColor="@color/DarkBlue"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/headings"
        android:text="@string/login_btn"
        android:fontFamily="@font/boldfont"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        />

    <Button
        android:id="@+id/account_btn"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_btn"
        android:textColor="@color/headings"
        android:textSize="11sp"
        android:fontFamily="@font/regularfont"
        style="?android:attr/buttonBarButtonStyle"
        />
</LinearLayout>
