<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/supremelightgrey"
    tools:context=".userpackage.Register">

    <!--REGISTRATION PAGE TITLE-->
    <TextView
        android:layout_gravity="center"
        android:textStyle="bold"
        android:paddingTop="60dp"
        android:textAlignment="center"
        android:textColor="@color/headings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:fontFamily="@font/extraboldfont"
        android:layout_marginBottom="60dp"
        android:textSize="50sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_txt"
                android:inputType="textPersonName"
                android:textColor="@color/DarkBlue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_txt"
                android:inputType="textEmailAddress"
                android:textColor="@color/DarkBlue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_txt"
                android:inputType="textPhonetic"
                android:textColor="@color/DarkBlue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_txt"
                android:inputType="textPassword"
                android:textColor="@color/DarkBlue" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_txt"
                android:inputType="textPassword"
                android:textColor="@color/DarkBlue" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="27dp"
            android:backgroundTint="@color/headings"
            android:fontFamily="@font/regularfont"
            android:text="@string/back_btn"
            android:textColor="@color/black"
            app:backgroundTint="@android:color/transparent"
            tools:ignore="ButtonStyle"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="650dp" />

        <Button
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/headings"
            android:fontFamily="@font/regularfont"
            android:text="@string/register_btn"
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:ignore="ButtonStyle"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="650dp" />

    </LinearLayout>

</LinearLayout>